[package]
name = "solayer"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.9.4"
thiserror = "1.0.24"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
solana-frozen-abi = "1.9.4"
zeroize = "1.4.3"
borsh = "0.9.1"
bytemuck = { version = "1.7.2", features = ["derive"] }

[dev-dependencies]
solana-sdk = "1.9.2"

[features]
test-bpf = []

[lib]
crate-type = ["cdylib", "lib"]

