[package]
name = "solayer-rs-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2.33.3"
solana-clap-utils = "1.9.4"
solana-cli-config = "1.9.4"
solana-client = "1.9.4"
solana-logger = "1.9.4"
solana-sdk = "1.9.4"
solana-program = "1.9.4"
solayer = {path = "../program"} 
borsh = "0.9.1"
bs58 = "0.4.0"
ed25519-dalek = { version = "=1.0.1"}

[[bin]]
name = "solayer-cli"
path = "src/main.rs"

